Jankley hide the sidebar on mobile devices (this may fix view issues)

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -4,6 +4,18 @@ body {
   background-color: #e2e2e2;
 }
 
+@media (min-width:600px) {
+  #panel-content {
+    padding-left: 0 !important;
+  }
+
+  #sidebar {
+    left: 0 !important;
+    width: 0 !important;
+    margin-left: 0 !important;
+  }
+}
+
 .sidebarHidden {
   #panel-content {
     padding-left: 0 !important;
